2015-07-23  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (nl): New.  Follow the change of NeuG.

2015-07-21  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.1.6.

2015-07-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (gpg_do_keygen): Support ECC.
	* src/call-ec.c (ecc_check_secret): New.
	* src/ecc.c (check_secret): New.

2015-07-18  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (keygen): It's always enabled.
	* src/openpgp-do.c (gpg_do_keygen): Support key generation.
	* src/openpgp.c (cmd_pgp_gakp): Likewise.
	* src/call-rsa.c (rsa_genkey): Likewise.
	* src/random.c (random_gen):  Likewise.
	* src/Makefile.in (KEYGEN_SUPPORT): Remove.
	* polarssl/include/polarssl/config.h (POLARSSL_GENPRIME): Define.

2015-07-16  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (FLASH_PAGE_SIZE, FLASH_SIZE, MEMORY_SIZE)
	[sys1_compat]: Use safe values for common binary.
	(TARGET_DEFINE): Remove.

2015-07-15  Niibe Yutaka  <gniibe@fsij.org>

	* tool/usb_strings.py (field): Add 'Board'.

	* regnual/regnual.c (usb_cb_get_descriptor): Update.
	* src/usb_ctrl.c (usb_cb_interface): Call usb_lld_write.
	* src/usb_desc.c (usb_cb_get_descriptor): Support sys_board_name,
	using usb_lld_write.
	* src/usb_lld.h (usb_cb_get_descriptor): Add last argument length
	for asked length.
	* src/usb_stm32f103.c (handle_setup0): Allow setup callback to
	call usb_lld_write with ENDP0.
	* src/usb_conf.h (NUM_STRING_DESC): Remove.

	* src/configure [!sys1_compat] (CONFIG): Don't include target
	board name.

	* src/flash.c: Detect flash_page_size at runtime.

	* src/main.c: Remove dependency to board.h.

	* src/neug.c: Update from NeuG 1.0.2.
	* src/adc_stm32f103.c: Update.

	* chopstx: Update to 0.07.
	* src/sys.c: Update.
	* src/sys.h: Update.
	* src/gnuk.ld.in: Update.

	* tool/stlinkv2.py (stlinkv2.get_chip_id): New.  Detect flash
	size, too.
	(main): Call stlinkv2.get_chip_id after MCU reset and stop.
	Verify read out fix.

2015-07-11  Niibe Yutaka  <gniibe@fsij.org>
